syntax = "proto3";

package opencdc.v1;

import "google/protobuf/descriptor.proto";
import "google/protobuf/struct.proto";

// CreatedAt can contain the time when the record was created in the 3rd party
// system. The expected format is a unix timestamp in nanoseconds.
option (metadata_created_at) = "opencdc.createdAt";
// ReadAt can contain the time when the record was read from the 3rd party
// system. The expected format is a unix timestamp in nanoseconds.
option (metadata_read_at) = "opencdc.readAt";

// We are (ab)using custom file options to define constants.
// See https://github.com/protocolbuffers/protobuf/issues/3520#issuecomment-323613839
extend google.protobuf.FileOptions {
  string metadata_created_at = 1000;
  string metadata_read_at = 1001;
}

// Operation defines what triggered the creation of a record.
enum Operation {
  OPERATION_UNSPECIFIED = 0;
  // Records with operation create contain data of a newly created entity.
  OPERATION_CREATE = 1;
  // Records with operation update contain data of an updated entity.
  OPERATION_UPDATE = 2;
  // Records with operation delete contain data of a deleted entity.
  OPERATION_DELETE = 3;
  // Records with operation snapshot contain data of a previously existing
  // entity, fetched as part of a snapshot.
  OPERATION_SNAPSHOT = 4;
}

// Record contains data about a single change event related to a single entity.
message Record {
  // Position uniquely identifies the record.
  bytes position = 1;

  // Operation defines what triggered the creation of a record. There are four
  // possibilities: create, update, delete or snapshot. The first three
  // operations are encountered during normal CDC operation, while "snapshot" is
  // meant to represent records during an initial load. Depending on the
  // operation, the record will contain either the state before the change,
  // after the change, or both (see fields before and after).
  Operation operation = 2;

  // Metadata contains optional information related to the record. Although the
  // map can contain arbitrary keys, the standard provides a set of standard
  // metadata fields (see options prefixed with metadata_*).
  map<string, string> metadata = 3;

  // Before contains the state of the entity before the operation occurred. This
  // field will only be populated for operations "update" and "delete".
  Entity before = 4;
  // After contains the state of the entity after the operation occurred. This
  // field will only be populated for operations "create", "update" and
  // "snapshot".
  Entity after = 5;
}

// Entity represents the state of the entity at a specific point in time.
message Entity {
  // Key represents a value that should identify the entity (e.g. database row).
  Data key = 1;
  // Payload holds the actual data of the entity.
  // If the key and payload both contain structured data it is preferable not to
  // include the key data in the payload data.
  Data payload = 2;
}

// Data is used to represent the record key and payload. It can be either raw
// data (byte array) or structured data (struct).
message Data {
  oneof data {
    // Raw data contains unstructured data in form of a byte array.
    bytes raw_data = 1;
    // Structured data contains data in form of a struct with fields.
    google.protobuf.Struct structured_data = 2;
  }
  // TODO schema will be added here in future iterations.
}
